# steroidslog

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench.cpp  figure5_bench.cpp  logger_adapters.h
bench/scripts/: plot_figure5.py  run_benchmark.sh
cmake/: BenchDependencies.cmake  GoogleTest.cmake
example/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/misc/: mpsc_bounded_queue.h  pseudomap.h  small_function.h  spsc_bounded_queue.h
lib/steroidslog/: log_levels.h  steroidslog.cpp  steroidslog.h
tests/: CMakeLists.txt  test_logger.cpp  test_pseudomap.cpp  test_spsc_queue.cpp  tests.cpp
